--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,47 +3,52 @@
 	<div class='row'>
 		<div class='col s6 offset-s3'>
 			<div class='form-group center-align'>
-				<h3 class='center-align'>Make a burger</h3>
 				<form action='/' method='POST'>
 					<div class='form-group'>
-						<label for='burger'>Burger Name:</label>
+						<label for='burger' id='make-burger-label'>MAKE A BURGER:</label>
 						<input type='text' id='burger' name='burger_name'>
 					</div>
-					<button class="waves-effect waves-light btn blue darken-2" type="submit">Add Burger</button>
+					<button class="waves-effect waves-light btn blue darken-2" id='add_burger' type="submit">Add Burger</button>
 				</form>
 			</div>
 		</div>
 	</div>
 
-	<div class='row'>
+	<div class='row' id='results-container'>
 		<div id='results' class='center-align'>
-			<div class='col s6'>
+			<div class='col s6' id='not-eaten'>
+				<h2 class='fresh-or-tummy'>Fresh!</h2>
 				{{#each burger}}
-				<div id='not-eaten' class='center-align'>
+				<div class='center-align'>
 					{{#unless this.devoured}}
-					<h4>{{this.burger_name}}</h4>
-					<form action='/{{this.id}}?_method=PUT' method='POST'>
-						<input type='hidden' name='devoured' value='true'>
-						<button class="waves-effect waves-light btn red darken-4" type="submit">Eat It!<br>
-					</form>
+					<div class='single-burger-container'>
+						<h4>{{this.burger_name}}</h4>
+						<form action='/{{this.id}}?_method=PUT' method='POST'>
+							<input type='hidden' name='devoured' value='true'>
+							<button class="waves-effect waves-light btn red darken-4" type="submit">Eat It!</button>
+						</form>
+					</div>
 					{{/unless}}
 				</div>
 				{{/each}}
 			</div>
-		</div>
 
-		<div class='col s6'>
-			{{#each burger}}
-			<div id='eaten' class='center-align'>
-				{{#if this.devoured}}
-				<h4>{{this.burger_name}}</h4>
-				<form action='/{{this.id}}?_method=PUT' method='POST'>
-					<input type='hidden' name='devoured' value='false'>
-					<button class="waves-effect waves-light btn green darken-4" type="submit">Regurgitate</button>
-				</form>
-				{{/if}}
+			<div class='col s6' id='eaten'>
+				<h2 class='fresh-or-tummy'>In A Tummy!</h2>
+				{{#each burger}}
+				<div class='center-align'>
+					{{#if this.devoured}}
+					<div class='single-burger-container'>
+						<h4>{{this.burger_name}}</h4>
+						<form action='/{{this.id}}?_method=PUT' method='POST'>
+							<input type='hidden' name='devoured' value='false'>
+							<button class="waves-effect waves-light btn yellow accent-2 black-text" type="submit">Regurgitate!</button>
+						</form>
+					</div>
+					{{/if}}
+				</div>
+				{{/each}}
 			</div>
-			{{/each}}
 		</div>
 	</div>
 </div>
