changed font again

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -107,7 +107,7 @@ input[type="text"] {
 }
 
 .single-burger-container {
-	font-family: southside_fizz;
+	font-family: bellerose;
 	font-weight: bold;
 	font-size: 2em;
 	margin: 8px 0px;
