--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4,16 +4,6 @@
 }
 
 @font-face {
-	font-family: bright_young_things;
-	src: url(../fonts/Bright_Young_Things.ttf);
-}
-
-@font-face {
-	font-family: flowers_of_destiny;
-	src: url(../fonts/CFFlowersofDestinyPersonal.ttf);
-}
-
-@font-face {
 	font-family: eat_at_joes;
 	src: url(../fonts/Eat_at_Joes.ttf);
 }
@@ -106,8 +96,8 @@ input[type="text"] {
 }
 
 .fresh-or-tummy {
-	font-family: flowers_of_destiny;
-	font-size: 5em;
+	font-family: eat_at_joes;
+	font-size: 2em;
 }
 
 #add_burger {
@@ -117,7 +107,7 @@ input[type="text"] {
 }
 
 .single-burger-container {
-	font-family: bright_young_things;
+	font-family: eat_at_joes;
 	font-weight: bold;
 	font-size: 2em;
 	margin: 8px 0px;
